--- a/mean/public/assets/less/_uikit_custom.less
+++ b/mean/public/assets/less/_uikit_custom.less
@@ -1924,4 +1924,8 @@ font-size:16px;
         stroke-dashoffset: 187;
         transform:rotate(450deg);
     }
+    .modal{
+        margin-left: 930px;
+        margin-top:-30px;
+    }
 }
