--- a/mean/public/assets/less/_uikit_custom.less
+++ b/mean/public/assets/less/_uikit_custom.less
@@ -1863,8 +1863,13 @@ font-size:16px;
 
 #studyHtmlCourse iframe {
     width: 100%;
-    max-height: 100%;
-    height: auto;
+    height: 100%;
+}
+
+#studyHtmlCourse p {
+    padding: 0;
+    margin: 0;
+    height: 100%;
 }
 
 .loading {
