--- a/mean/src/client/workspace/views/header.client.view.html
+++ b/mean/src/client/workspace/views/header.client.view.html
@@ -20,10 +20,7 @@
 			</div>
 			<div class="uk-navbar-flip">
 				<ul class="uk-navbar-nav user_actions">
-					<li data-uk-dropdown="{mode:'click',pos:'bottom-right'}"><a
-						href="#" class="user_action_icon"><i
-							class="material-icons md-24 md-light">&#xE7F4;</i><span
-							class="uk-badge" ng-show="vm.alerts.length">{{vm.alerts.length}}</span></a>
+					<li data-uk-dropdown="{mode:'click',pos:'bottom-right'}">
 						<div class="uk-dropdown uk-dropdown-xlarge">
 							<div class="md-card-content">
 								<ul class="uk-tab uk-tab-grid"
