--- a/mean/src/client/lms/views/course-board/course-unit/test/form-quiz.section-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/form-quiz.section-course.client.view.html
@@ -150,7 +150,8 @@
 							</div>
 
 							<div class="md-fab-wrapper md-fab-in-card" style="position: fixed; z-index: 1000; top: 110px; height: 80px;">
-								<div class="md-fab md-fab-primary md-fab-sheet" md-fab-sheet>
+								<div class="md-fab md-fab-primary md-fab-sheet" md-fab-sheet style="margin-top: -55px;
+    margin-right: 123px;">
 									<i class="material-icons">add</i>
 									<div class="md-fab-sheet-actions">
 										<a data-uk-modal="{target:'#select_question'}" class="md-color-white">{{'COMMON.QUESTION_TYPE.LIB'|translate}}</a>
