--- a/mean/src/client/users/views/admin/permission-users.client.view.html
+++ b/mean/src/client/users/views/admin/permission-users.client.view.html
@@ -154,7 +154,7 @@
             		<div class="uk-width-2-3">
             			<selectize
 							config="vm.permissionApiConfig" position="bottom" ng-change="vm.editPermissionApi()"
-							options="vm.permissionApiOptions" ng-model="vm.permissionApi._id"
+							options="vm.permissionApiOptions" ng-model="vm.currentPermissionApiId"
 							name="api_edit_role"></selectize>
             		</div>
             		<div class="uk-width-1-3">
