Add webcam when submit attempt

--- a/mean/src/client/lms/views/course-board/study-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/study-course.client.view.html
@@ -47,7 +47,7 @@
 					<div class="md-card-content  border-radius-bottom">
 						<ui-view></ui-view>
 					</div>
-					<div class=" uk-text-center ">
+					<div class=" uk-text-center section-navigation">
 						<a ng-click="vm.prevSection()"
 							class="md-btn md-btn-flat  md-btn-mini "> <i
 							class="uk-icon-chevron-left uk-text-primary"></i>
