--- a/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
@@ -80,12 +80,15 @@
 								<h2>Chụp ảnh người làm bài</h2>
 							</div>
 							<div class="uk-modal-body">
-								<ng-webcam config="vm.config"
-													 on-error="vm.onError(err)"
-													 on-load="vm.onLoad()"
-													 on-live="vm.onLive()"
-													 on-capture-progress="vm.onCaptureProgress(src, progress)"
-													 on-capture-complete="vm.onCaptureComplete(src)"></ng-webcam>
+                <ng-camera
+                  type="photo"
+                  enabled="true"
+                  width="320"
+                  height="240"
+                  countdown="3"
+                  ng-model="media"
+                  overlay-src="media"
+                  capture-message="Xong!"></ng-camera>
 								<p>
 									Chụp ảnh của bạn bằng webcam để gửi kèm bài kiểm tra.
 								</p>
