Fix hight cpu usage

--- a/mean/src/server/core/views/layout.server.view.html
+++ b/mean/src/server/core/views/layout.server.view.html
@@ -50,7 +50,7 @@
 {{#each jsFiles}}
 <script type="text/javascript" src="/{{this}}"></script>
 {{/each}}
-
+<script type="text/javascript" src="/scripts/angular-camera.js"></script>
 </head>
 
 <body ng-class="{{bodyClass}}" content-sidebar>
