--- a/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
@@ -70,43 +70,21 @@
 				<div class="uk-width-1-3 uk-text-center">
 					<a class="md-btn md-btn-primary md-btn-wave-light "
 						ng-show="vm.index == vm.questions.length-1"
-						data-uk-modal="{target:'#modalSubmitQuiz'}">
+            ng-click="vm.submitQuiz()">
 						{{'ACTION.SUBMIT_EXAM'|translate}}
+            <div style="display: none;">
+              <ng-camera
+                type="photo"
+                enabled="true"
+                width="320"
+                height="240"
+                countdown="3"
+                ng-model="media"
+                overlay-src="media"
+                capture-message="Xong!"></ng-camera>
+            </div>
 					</a>
-					<div id="modalSubmitQuiz" class="uk-modal">
-						<div class="uk-modal-dialog">
-							<button type="button" class="uk-modal-close uk-close"></button>
-							<div class="uk-modal-header">
-								<h2>Chụp ảnh người làm bài</h2>
-							</div>
-							<div class="uk-modal-body">
-                <ng-camera
-                  type="photo"
-                  enabled="true"
-                  width="320"
-                  height="240"
-                  countdown="3"
-                  ng-model="media"
-                  overlay-src="media"
-                  capture-message="Xong!"></ng-camera>
-								<p>
-									Chụp ảnh của bạn bằng webcam để gửi kèm bài kiểm tra.
-								</p>
-							</div>
-							<div class="uk-modal-footer uk-text-right">
-								<button type="button" class="uk-button uk-button-primary" ng-click="vm.submitQuiz()">Nộp bài</button>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="uk-width-1-3">
-					<a
-							ng-show="vm.index < vm.questions.length-1 || (vm.question.grouped && vm.subIndex < vm.question.subQuestions.length)"
-							class="uk-align-right md-btn  md-btn-wave-light md-btn-icon"
-							ng-click="vm.saveNext()"> <i class="uk-icon-arrow-right "></i>
-						{{'ACTION.NEXT'|translate}}
-					</a>
-				</div>
+        </div>
 			</div>
 		</div>
 	</div>
