--- a/mean/src/client/users/views/edit-user.client.view.html
+++ b/mean/src/client/users/views/edit-user.client.view.html
@@ -162,6 +162,14 @@
 
 								</div>
 
+								<div class="uk-width-medium-1-2">
+									<label for="user_position_control">{{'MODEL.USER.POSITION'|translate}}</label> <input 
+									class="md-input" type="text" id="user_position_control"
+									name="position" ng-model="vm.user.position" 
+									md-input />
+
+								</div>
+
 							</div>
 
 
