--- a/mean/src/client/users/views/view-user.client.view.html
+++ b/mean/src/client/users/views/view-user.client.view.html
@@ -86,6 +86,13 @@
                                                         class="uk-text-small uk-text-muted">{{'MODEL.USER.LAST_NAME'|translate}}</span>
                                                 </div>
                                             </li>
+                                              <li>
+
+                                                <div class="md-list-content">
+                                                    <span class="md-list-heading">{{vm.user.position}}</span> <span
+                                                        class="uk-text-small uk-text-muted">{{'MODEL.USER.POSITION'|translate}}</span>
+                                                </div>
+                                            </li>
                                             <li>
 
                                                 <div class="md-list-content">
