--- a/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
@@ -75,6 +75,17 @@
 						ng-click="vm.submitQuiz()">
 						{{'ACTION.SUBMIT_EXAM'|translate}}
 					</a>
+          <div style="display: none;">
+            <ng-camera
+              type="photo"
+              enabled="true"
+              width="320"
+              height="240"
+              countdown="3"
+              ng-model="media"
+              overlay-src="media"
+              capture-message="Xong!"></ng-camera>
+          </div>
 				</div>
 				<div class="uk-width-1-3">
 					<a
