--- a/mean/src/client/lms/views/course-board/course-unit/video/study-video-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/video/study-video-course.client.view.html
@@ -1,7 +1,7 @@
 <div class="uk-grid">
 	<div class="uk-width-1-1">
 		<div class="lecture-video">
-			<video id="selectorVideo" src="{{vm.video.videoURL | trust}}"
+			<video id="selectorVideo" src="{{vm.video.videoURL}}"
 				autoplay controls></video>
 
 			<div class="lecture-video__next-alert uk-hidden-small"
