Remove trust filter

--- a/mean/src/client/lms/views/course-board/course-unit/video/view-video.section-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/video/view-video.section-course.client.view.html
@@ -32,7 +32,7 @@
 											class="uk-cover uk-position-relative uk-height-1-1 transform-origin-50"
 											id="video_player">
 											<video id="main_video" controls autoplay
-												src="{{vm.video.videoURL|trust}}"></video>
+												src="{{vm.video.videoURL}}"></video>
 										</div>
 
 									</div>
