--- a/mean/src/client/lms/views/course-board/course-unit/video/form-video.section-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/video/form-video.section-course.client.view.html
@@ -71,7 +71,7 @@
 											class="uk-cover uk-position-relative  transform-origin-50"
 											id="video_player">
 											<video id="main_video" controls autoplay
-												src="{{vm.video.videoURL|trust}}"></video>
+												src="{{vm.video.videoURL}}"></video>
 										</div>
 
 									</div>
