--- a/mean/src/client/lms/views/course-board/course-unit/video/preview-video-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/video/preview-video-course.client.view.html
@@ -6,7 +6,7 @@
 		</ul>
 		<ul id="tabs_1" class="uk-switcher uk-margin">
 			<li><video id="selectorVideo"
-					src="{{vm.video.videoURL | trust}}" autoplay controls></video></li>
+					src="{{vm.video.videoURL }}" autoplay controls></video></li>
 			<li>{{vm.video.transcript}}</li>
 
 		</ul>
