--- a/mean/src/client/lms/views/course-board/course-unit/practice/form-practice.section-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/practice/form-practice.section-course.client.view.html
@@ -97,7 +97,7 @@
 								<div class="md-card-content">
 									<div class="uk-cover uk-position-relative  transform-origin-50"
 										id="video_player">
-										<video id="main_audio" controls src="{{vm.practice.audioURL | trust}}"></video>
+										<video id="main_audio" controls src="{{vm.practice.audioURL }}"></video>
 									</div>
 
 								</div>
