--- a/mean/src/client/lms/views/course-board/course-unit/test/form-quiz.section-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/form-quiz.section-course.client.view.html
@@ -251,6 +251,12 @@
 									<span ng-if="question.type=='sc'">{{'COMMON.QUESTION_TYPE.SC'|translate}}</span>
 									<span ng-if="question.type=='tf'">{{'COMMON.QUESTION_TYPE.TF'|translate}}</span>
 									<span ng-if="question.type=='fb'">{{'COMMON.QUESTION_TYPE.FB'|translate}}</span>
+									<span ng-if="question.type=='fb'">{{'COMMON.QUESTION_TYPE.FB'|translate}}</span>
+									<span ng-if="question.type=='ext'">{{'COMMON.QUESTION_TYPE.EXT'|translate}}</span>
+									<span ng-if="question.type=='dnd'">{{'COMMON.QUESTION_TYPE.DND'|translate}}</span>
+									<span ng-if="question.type=='pic'">{{'COMMON.QUESTION_TYPE.PIC'|translate}}</span>
+									<span ng-if="question.type=='as'">{{'COMMON.QUESTION_TYPE.AS'|translate}}</span>
+
 								</td>
 								<td class="uk-text-center uk-width-1-10"><span
 									ng-if="question.level=='easy'">{{'COMMON.DIFFICULTY.EASY'|translate}}</span>
