--- a/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
@@ -85,6 +85,14 @@
             </div>
 					</a>
         </div>
+        <div class="uk-width-1-3">
+          <a
+            ng-show="vm.index < vm.questions.length-1 || (vm.question.grouped && vm.subIndex < vm.question.subQuestions.length)"
+            class="uk-align-right md-btn  md-btn-wave-light md-btn-icon"
+            ng-click="vm.saveNext()"> <i class="uk-icon-arrow-right "></i>
+            {{'ACTION.NEXT'|translate}}
+          </a>
+        </div>
 			</div>
 		</div>
 	</div>
