--- a/mean/src/client/lms/views/exam-board/instructor/form-exam.client.view.html
+++ b/mean/src/client/lms/views/exam-board/instructor/form-exam.client.view.html
@@ -187,7 +187,7 @@
 													<span ng-if="question.type=='as'">{{'COMMON.QUESTION_TYPE.AS'|translate}}</span>
 													<span ng-if="question.type=='dnd'">{{'COMMON.QUESTION_TYPE.DND'|translate}}</span>
 													<span ng-if="question.type=='pic'">{{'COMMON.QUESTION_TYPE.PIC'|translate}}</span>
-													<span ng-if="question.grouped">{{'COMMON.QUESTION_TYPE.GRP'|translate}}</span>
+													<!-- <span ng-if="question.grouped">{{'COMMON.QUESTION_TYPE.GRP'|translate}}</span> -->
 												</td>
 												<td class="uk-text-center uk-width-1-10"><span
 													ng-if="question.level=='easy'">{{'COMMON.DIFFICULTY.EASY'|translate}}</span>
