--- a/mean/src/client/lms/views/course-board/course-unit/test/form-quiz.section-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/form-quiz.section-course.client.view.html
@@ -91,10 +91,10 @@
 																ng-if="question.type=='as'"
 																class="uk-text-italic uk-text-small"> -
 																{{'COMMON.QUESTION_TYPE.AS'|translate}}</span>
-																 <span
+																 <!-- <span
 																ng-if="question.grouped"
 																class="uk-text-italic uk-text-small"> -
-																{{'COMMON.QUESTION_TYPE.GROUP'|translate}}</span>
+																{{'COMMON.QUESTION_TYPE.GROUP'|translate}}</span> -->
 														</h3>
 													</div>
 													<div
@@ -140,9 +140,9 @@
 												<div ng-if="question.type=='pic'">
 													<point-click-question mode="'edit'" question="question"></point-click-question>
 												</div>
-												<div ng-if="question.grouped">
+												<!-- <div ng-if="question.grouped">
 													<group-question mode="'edit'" question="question"></group-question>
-												</div>
+												</div> -->
 											</div>
 										</div>
 									</div>
@@ -162,7 +162,6 @@
 										<a ng-click="vm.addQuestion('pic')" class="md-color-white">{{'COMMON.QUESTION_TYPE.PIC'|translate}}</a>
 										<a ng-click="vm.addQuestion('dnd')" class="md-color-white">{{'COMMON.QUESTION_TYPE.DND'|translate}}</a>
 										<a ng-click="vm.addQuestion('as')" class="md-color-white">{{'COMMON.QUESTION_TYPE.AS'|translate}}</a>
-										<a ng-click="vm.addGroupQuestion()" class="md-color-white">{{'COMMON.QUESTION_TYPE.GRP'|translate}}</a>
 									</div>
 								</div>
 							</div>
