--- a/mean/src/client/conference/views/conference.client.view.html
+++ b/mean/src/client/conference/views/conference.client.view.html
@@ -181,7 +181,7 @@
               <video class="video_training" ng-attr-id="{{slot.videoId}}" autoplay poster="/assets/img/camera.png"></video>
               <div class="top_bar clearfix">
                 {{slot.publisher.member.displayName}}
-                <span ng-show="vm.member.role =='teacher'" ng-click="vm.memberFullScreen(slot.publisher)" class="btn right">
+                <span>
                   <i class=" material-icons md-24 md-light">&#xE8AD;</i>
                 </span>
                 <span ng-show="vm.member.role =='teacher'" ng-click="vm.memberDiscard(slot.publisher)" class="btn-close right">
